created link to user's profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
+server.port=8081
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-##Azure DB
-#spring.datasource.url=jdbc:postgresql://registrationTest.postgres.database.azure.com:5432/courseProj
-#spring.datasource.username=postgres@registrationTest
-#spring.datasource.password=Ypq5701z
+#Azure DB
+spring.datasource.url=jdbc:postgresql://registrationTest.postgres.database.azure.com:5432/courseProj
+spring.datasource.username=postgres@registrationTest
+spring.datasource.password=Ypq5701z
 
-#Local DB
-spring.datasource.url=jdbc:postgresql://localhost:5432/courseProjDB
-spring.datasource.username=postgres
-spring.datasource.password=3ed815
+##Local DB
+#spring.datasource.url=jdbc:postgresql://localhost:5432/courseProjDB
+#spring.datasource.username=postgres
+#spring.datasource.password=3ed815
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
