--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,12 @@
             <artifactId>spring-security-oauth2-autoconfigure</artifactId>
             <version>2.6.3</version>
         </dependency>
-
+        <!-- Cloudinary -->
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.31.0</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
