--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,5 +25,8 @@ security.oauth2.client.scope=openid,email,profile
 security.oauth2.resource.userInfoUri=https://www.googleapis.com/oauth2/v3/userinfo
 security.oauth2.resource.preferTokenInfo=true
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 
 
