--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,28 +2,23 @@ server.port=8081
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-#Azure DB
-spring.datasource.url=jdbc:postgresql://registrationTest.postgres.database.azure.com:5432/courseProj
-spring.datasource.username=postgres@registrationTest
-spring.datasource.password=Ypq5701z
-
 ##Local DB
-#spring.datasource.url=jdbc:postgresql://localhost:5432/courseProjDB
-#spring.datasource.username=postgres
-#spring.datasource.password=3ed815
+spring.datasource.url=jdbc:postgresql://localhost:5432/courseProjDB
+spring.datasource.username=postgres
+spring.datasource.password=3ed815
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
-security.oauth2.client.clientId=997114737626-5unucg42ubebic5e9sg4jv4a0ebnv5nv.apps.googleusercontent.com
-security.oauth2.client.clientSecret=${clientSecret}
-security.oauth2.client.accessTokenUri=https://www.googleapis.com/oauth2/v4/token
-security.oauth2.client.userAuthorizationUri=https://accounts.google.com/o/oauth2/v2/auth
-security.oauth2.client.clientAuthenticationScheme=form
-security.oauth2.client.scope=openid,email,profile
-security.oauth2.resource.userInfoUri=https://www.googleapis.com/oauth2/v3/userinfo
-security.oauth2.resource.preferTokenInfo=true
+#security.oauth2.client.clientId=997114737626-5unucg42ubebic5e9sg4jv4a0ebnv5nv.apps.googleusercontent.com
+#security.oauth2.client.clientSecret=${clientSecret}
+#security.oauth2.client.accessTokenUri=https://www.googleapis.com/oauth2/v4/token
+#security.oauth2.client.userAuthorizationUri=https://accounts.google.com/o/oauth2/v2/auth
+#security.oauth2.client.clientAuthenticationScheme=form
+#security.oauth2.client.scope=openid,email,profile
+#security.oauth2.resource.userInfoUri=https://www.googleapis.com/oauth2/v3/userinfo
+#security.oauth2.resource.preferTokenInfo=true
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
