--- a/pom.xml
+++ b/pom.xml
@@ -10,15 +10,14 @@
     <groupId>com.example</groupId>
     <artifactId>deploy</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-<!--    <packaging>jar</packaging>>-->
     <name>deploy</name>
     <description>deploy</description>
+    <packaging>jar</packaging>
     <properties>
         <java.version>11</java.version>
         <spring-cloud.version>2021.0.1</spring-cloud.version>
     </properties>
     <dependencies>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
